--- a/.github/workflows/foo.yml
+++ b/.github/workflows/foo.yml
@@ -1,32 +1,20 @@
-name: Python package
-
+name: CI
+# 在push的时候触发这个workflow
 on: [push]
-
+# workflow的job内容
 jobs:
   build:
-
+    # 跑job的系统
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [2.7, 3.5, 3.6, 3.7, 3.8]
-
+    # 定义需要跑的脚本
     steps:
+    # 使用checkout action
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    # Hello World
+    - name: Run a one-line script
+      run: echo Hello, world!
+    # 打印多行
+    - name: Run a multi-line script
       run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        pytest
+        echo Add other actions to build,
+        echo test, and deploy your project.
